--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-* text=auto eol=lf
+# Force Go files to use LF line endings
+*.go text eol=lf
+
+# Force env file to use LF
+.env.example text eol=lf
