update: env example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
 APP_ENV=development
 APP_PORT=14444
-DB_URL=postgres://postgres:duykhanh@localhost:5432/nso_db?sslmode=disable
+
+DEFAULT_LANGUAGE=vi
+LOG_LEVEL=debug
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=nso_db
+DB_USER=postgres
+DB_PASS=duykhanh
+DB_SSL=disable
+
 REDIS_URL=redis://localhost:6379
