🎯 Refactor project to Clean Architecture layout
- Apply Clean Architecture principles: separate pkg, internal, domain layers
- Introduce internal/app for startup logic (fx.Module wiring, seed, migrate)
- Move config, logger, database, lang into internal/pkg/
- Use fx for DI across layers (zap.Logger, *gorm.DB, lang.Get)
- Standardize Session and Server into internal/net/
- Improve modularity for handler (not_login, not_map, sub_command)
- Refactor lang service to support fallback and injection
- Ensure proper shutdown via fx.Lifecycle and graceful stop

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_ENV=development
 APP_PORT=14444
 
-DEFAULT_LANGUAGE=vi
-LOG_LEVEL=debug
-
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=nso_db
+DB_NAME=nso
 DB_USER=postgres
-DB_PASS=duykhanh
+DB_PASSWORD=123456
 DB_SSL=disable
 
 REDIS_URL=redis://localhost:6379
+SERVER_CODE=iron
+LOG_LEVEL=debug
+DEFAULT_LANGUAGE=vi
